--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.hse.project</groupId>
-    <artifactId>mavenTriangleRasterization</artifactId>
+    <artifactId>triangleRasterization</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
